--- a/Documents/insights-from-data-main/insights-from-data-main/vercel.json
+++ b/Documents/insights-from-data-main/insights-from-data-main/vercel.json
@@ -1,4 +1,19 @@
 {
+  "headers": [
+    {
+      "source": "/curriculo.pdf",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "application/pdf"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=31536000, immutable"
+        }
+      ]
+    }
+  ],
   "rewrites": [
     {
       "source": "/((?!.*\\.[a-z]{2,4}$).*)",
